스타일 수정 및 글 추가

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -13,6 +13,7 @@ html {
 
 body {
   margin: 0;
+  max-width:660px;
   font-family: "Lato", sans-serif;
 }
 
@@ -45,18 +46,32 @@ body {
 
 div.content {
   margin-left: 200px;
-  padding: 1px 16px;
+  padding: 1px 22px;
   height: 1000px;
 }
 
-@media screen and (max-width: 700px) {
+div.content > ul {
+// margin-top:5rem;
+}
+
+div.content > p{
+    padding-top:.5rem;
+    padding-bottom:.5rem;
+    font-size:20px;
+    white-space:pre-lien;
+    margin-top:12.5rem;
+}
+
+@media screen and (max-width: 600px) {
   .sidebar {
     width: 100%;
     height: auto;
     position: relative;
   }
   .sidebar a {float: left;}
-  div.content {margin-left: 0;}
+  div.content {
+  margin-left: 0;
+  }
 }
 
 @media screen and (max-width: 400px) {
@@ -64,4 +79,21 @@ div.content {
     text-align: center;
     float: none;
   }
+  div.content {
+  margin-left: 0;
+  margin-top: 1.5rem;
+  }
+}
+
+.profileImage {
+ border-radius: 50%;
+ width: 5rem;
+ height: 5rem;
+ margin: .5rem 0;
+}
+
+.center {
+    display:flex;
+    justify-content:center;
+    align-height:center;
 }
