--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,15 +1,13 @@
-<!--<div class="sidebar">-->
-<!--    <a class="active" href="#home">Home</a>-->
-<!--    <a href="#news">News</a>-->
-<!--    <a href="#contact">Contact</a>-->
-<!--    <a href="#about">About</a>-->
-<!--</div>-->
-
 <nav class="sidebar">
+    <div class="center">
+        <img
+                class="profileImage"
+                src="/assets/images/profile.webp">
+    </div>
     {% for item in site.data.navigation %}
-<!--    <a href="{{ item.link}}" {% if page.url == item.link %} class="current" {% endif %}>-->
-<!--       {{ item.name }}-->
-<!--    </a>-->
+    {% if item.user %}
+    <p class="center">{{item.user}}</p>
+    {% endif %}
     <a href="{{item.link}}">{{ item.name }}</a>
     {% endfor %}
 </nav>
