--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,3 +1,8 @@
 ---
+# Only the main Sass file needs front matter (the dashes are enough)
+search: false
 ---
+
+@charset "utf-8";
 @import "main";
+@import "post";
