adding js libs, css libs and stylling

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,20 @@
+---
+---
 <!doctype html>
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="{{ "/assets/css/bootstrap/bootstrap.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
     {% seo %}
 </head>
-<body>
-<div class="sidebar">
+<body class="bg-black bg-opacity-25 text-bg-light fs-5">
     {% include navigation.html %}
-</div>
-<div class="content">
+<div class="m-4 pt-4">
     {{ content }}
 </div>
-
-
-
 </body>
+{% include footer.html %}
 </html>
