adding js libs, css libs and stylling

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,32 +1,6 @@
-<!--<nav class="sidebar">-->
-<!--    <div class="center">-->
-<!--        <img-->
-<!--                class="profileImage"-->
-<!--                src="/assets/images/profile.webp">-->
-<!--    </div>-->
-<!--    {% for item in site.data.navigation %}-->
-<!--    {% if item.user %}-->
-<!--    <p class="center">{{item.user}}</p>-->
-<!--    {% endif %}-->
-<!--    <a href="{{item.link}}">{{ item.name }}</a>-->
-<!--    {% endfor %}-->
-<!--</nav>-->
-<!--<nav class="navbar navbar-expand-lg bg-light">-->
-<!--    <div class="center">-->
-<!--        <img-->
-<!--                class="profileImage"-->
-<!--                src="/assets/images/profile.webp">-->
-<!--    </div>-->
-<!--    {% if item.user %}-->
-<!--    <p class="center">{{item.user}}</p>-->
-<!--    {% endif %}-->
-<!--    {% for item in site.data.navigation %}-->
-<!--    <a href="{{item.link}}">{{ item.name }}</a>-->
-<!--    {% endfor %}-->
-<!--</nav>-->
-<nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">{{ site.github_username }}</a>
+<nav class="navbar navbar-expand-sm border-bottom-1 border-danger">
+    <div class="container-fluid mx-2">
+        <a class="nav-link active" href="/">{{ site.github_username }}</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <img src="/assets/images/profile.webp" alt="🌸somsom2🌸" class="profile rounded-3">
         </button>
@@ -34,7 +8,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 {% for item in site.data.navigation %}
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ item.link }}">{{ item.name }}</a>
+                    <a class="nav-link active  text-white" aria-current="page" href="{{ item.link }}">{{ item.name }}</a>
                 </li>
                 {% endfor %}
             </ul>
