--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
     {% seo %}
 </head>
-<body class="bg-black bg-opacity-25 text-bg-light fs-5">
+<body class="bg-dark text-bg-dark fs-5 ">
     {% include navigation.html %}
-<div class="m-4 pt-4">
+<div class="mt-4 pt-4 mx-2 grid">
     {{ content }}
 </div>
 </body>
