--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,3 +4,47 @@
     width:2.5rem;
     height:2.5rem;
 }
+
+.bottom20 {
+    height:80%
+}
+.footer-wrapper{
+    min-height: 100vh;
+    padding-bottom: 15px;
+}
+.page-footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    padding:20px;
+}
+.pages-wrapper {
+    padding:20px;
+
+}
+
+.content > P {
+    padding-top:2rem;
+
+}
+
+.PageNavigation {
+    font-size: 14px;
+    display: block;
+    width: auto;
+    overflow: hidden;
+}
+
+.PageNavigation a {
+    display: block;
+    width: 50%;
+    float: left;
+    margin: 1em 0;
+}
+
+.PageNavigation .next {
+    text-align: right;
+}
+
