--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,17 +8,13 @@
 .bottom20 {
     height:80%
 }
-.footer-wrapper{
-    min-height: 100vh;
-    padding-bottom: 15px;
-}
 .page-footer{
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
     color: white;
-    padding:20px;
+    padding-top:20px;
 }
 .pages-wrapper {
     padding:20px;
