--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/css/bootstrap/bootstrap.css" | relative_url }}">
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+    <link rel="stylesheet" href="/assets/css/syntax.css">
     {% seo %}
 </head>
 <body class="bg-dark text-bg-dark fs-5 ">
