clojure in action 글 추가

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,9 +21,15 @@
 
 }
 
+.content {
+    margin:2rem;
+    background-color: #545454;
+    padding:1.5rem;
+    -webkit-box-shadow: 3px 5px 8px 0px rgba(0,0,0,0.73);
+    box-shadow: 3px 5px 8px 0px rgba(0,0,0,0.73);
+}
 .content > P {
     padding-top:2rem;
-
 }
 
 .PageNavigation {
