--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 </head>
 <body class="bg-dark text-bg-dark fs-5 ">
     {% include navigation.html %}
-<div class="mt-4 pt-4 mx-2 grid">
+<div class="mt-4 pt-4 mx-2 grid paper">
     {{ content }}
 </div>
 </body>
