--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,6 +21,13 @@
 
 }
 
+.paper {
+    background-color: #313131;
+    padding:1.5rem;
+    -webkit-box-shadow: 3px 5px 8px 0px rgba(0,0,0,0.73);
+    box-shadow: 3px 5px 8px 0px rgba(0,0,0,0.73);
+}
+
 .content {
     margin:2rem;
     background-color: #545454;
