--- a/_includes/pageIterator.html
+++ b/_includes/pageIterator.html
@@ -1,11 +1,15 @@
 
 <div class="py-5">
+    <h3>어떤 POST들이 있을까요? 👇</h3>
     {% for post in paginator.posts %}
-    <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+    <div class="py-5">
+        <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
 
-    <p class="author">
-        <span class="date">{{ post.date }}</span>
-    </p>
-    <p>{{ post.excerpt }}</p>
+        <p class="author">
+            <span class="date">{{ post.date }}</span>
+        </p>
+
+        <p class="">{{ post.excerpt }}</p>
+    </div>
     {% endfor %}
 </div>
