--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,18 +22,19 @@
 }
 
 .paper {
-    background-color: #313131;
-    padding:1.5rem;
-    -webkit-box-shadow: 3px 5px 8px 0px rgba(0,0,0,0.73);
-    box-shadow: 3px 5px 8px 0px rgba(0,0,0,0.73);
+    /*border:1px solid #7cff00;*/
+    /*background-color: #313131;*/
+    /*padding:.1rem;*/
+    /*-webkit-box-shadow: 3px 5px 8px 0px rgba(0,0,0,0.73);*/
+    /*box-shadow: 3px 5px 8px 0px rgba(0,0,0,0.73);*/
 }
 
 .content {
-    margin:2rem;
-    background-color: #545454;
-    padding:1.5rem;
-    -webkit-box-shadow: 3px 5px 8px 0px rgba(0,0,0,0.73);
-    box-shadow: 3px 5px 8px 0px rgba(0,0,0,0.73);
+    padding:4rem .5rem .5rem .5rem;
+    border-top:3px dashed #58ff1a;
+    /*margin:0.2rem;*/
+    /*background-color: #212121;*/
+    /*padding:0.1rem;*/
 }
 .content > P {
     padding-top:2rem;
