style 수정 및 tag추가

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,23 +18,20 @@
 }
 .pages-wrapper {
     padding:20px;
-
 }
 
-.paper {
-    /*border:1px solid #7cff00;*/
-    /*background-color: #313131;*/
-    /*padding:.1rem;*/
-    /*-webkit-box-shadow: 3px 5px 8px 0px rgba(0,0,0,0.73);*/
-    /*box-shadow: 3px 5px 8px 0px rgba(0,0,0,0.73);*/
+@media only screen and (min-width: 600px) {
+    .paper {
+        width:calc(100vw - 20px);
+        display: grid;
+        justify-content: center;
+        align-content: center;
+    }
 }
 
 .content {
     padding:4rem .5rem .5rem .5rem;
     border-top:3px dashed #58ff1a;
-    /*margin:0.2rem;*/
-    /*background-color: #212121;*/
-    /*padding:0.1rem;*/
 }
 .content > P {
     padding-top:2rem;
