--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,9 +6,17 @@ layout: default
         {{ page.date | date_to_string }}
         {% assign author = site.authors | where: 'short_name', page.author | first%}
         {% if author %}
-        - <a href="{{ author.url }}" class="text-black-50 fs-6 fst-italic"> 👨‍🎨 {{ author.name }}</a>
+        - <a href="{{ author.url }}" class="fs-6 fst-italic"> Author: 👨‍🎨 {{ author.name }}</a>
         {% endif %}
     </p>
+<div>
+    Tagged
+    {% for tag in page.tags %}
+    <a class="post" href="{{post.url}}">#{{tag}}</a>{% unless forloop.last %}, {% endunless %}
+    {% endfor %}
+</div>
+
+
 <div class="content">
     {{ content | markdownify }}
 </div>
