오탈자 수정 및 스타일링

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,13 +9,8 @@ layout: default
         - <a href="{{ author.url }}" class="fs-6 fst-italic"> Author: 👨‍🎨 {{ author.name }}</a>
         {% endif %}
     </p>
-<div>
-    Tagged
-    {% for tag in page.tags %}
-    <a class="post" href="{{post.url}}">#{{tag}}</a>{% unless forloop.last %}, {% endunless %}
-    {% endfor %}
-</div>
 
+{% include tagged.html%}
 
 <div class="content">
     {{ content | markdownify }}
