--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,25 +20,6 @@
     padding:20px;
 }
 
-@media only screen and (min-width: 600px) {
-    .paper {
-        width:calc(100vw - 20px);
-        display: grid;
-        justify-content: center;
-        align-content: center;
-    }
-}
-
-.content {
-    padding:4rem .5rem .5rem .5rem;
-    border-top:3px dashed #58ff1a;
-}
-.content > P {
-    padding-top:2rem;
-}
-.content > P > img {
-    width:100%;
-}
 
 .PageNavigation {
     font-size: 14px;
@@ -58,3 +39,32 @@
     text-align: right;
 }
 
+@media only screen and (min-width: 600px) {
+    .default-body {
+        display: grid;
+        justify-content: center;
+        align-content: center;
+    }
+
+    .paper {
+        width:calc(100vw - 10rem);
+        display: grid;
+        justify-content: center;
+        align-content: center;
+    }
+}
+
+.content {
+    padding:4.5rem .5rem .5rem .5rem;
+    border-top:3px dashed #58ff1a;
+
+}
+.content > P {
+    padding-top:1.2rem;
+}
+.content > * {
+    font-size:larger
+}
+.content > P > img {
+    width:100%;
+}
