--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/assets/css/syntax.css">
     {% seo %}
 </head>
-<body class="bg-dark text-bg-dark fs-5 ">
+<body class="bg-dark text-bg-dark default-body">
     {% include navigation.html %}
 <div class="mt-4 pt-4 mx-2 grid paper">
     {{ content }}
