fs 글 추가 및 스타일링

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,9 @@ layout: default
 {% include tagged.html%}
 
 <div class="content">
+    <article>
     {{ content | markdownify }}
+    </article>
 </div>
 <div class="g-col-4">
     <div class="pt-4"></div>
