--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,13 +9,15 @@
     <link rel="stylesheet" href="{{ "/assets/css/bootstrap/bootstrap.css" | relative_url }}">
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
     <link rel="stylesheet" href="/assets/css/syntax.css">
+    <link rel="stylesheet" href="/assets/css/post.css">
     {% seo %}
 </head>
-<body class="bg-dark text-bg-dark default-body">
+<body class="default-body">
     {% include navigation.html %}
 <div class="mt-4 pt-4 mx-2 grid paper">
     {{ content }}
 </div>
 </body>
 {% include footer.html %}
+<script src="/assets/js/hello.js" defer about="hello"></script>
 </html>
