--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,9 @@
+---
+# this ensures Jekyll reads the file to be transformed into CSS later
+# only Main files contain this front matter, not partials.
+---
+@import "typography";
+@import "layout";
 @charset "UTF-8";
 
 .profile {
@@ -39,20 +45,6 @@
     text-align: right;
 }
 
-@media only screen and (min-width: 600px) {
-    .default-body {
-        display: grid;
-        justify-content: center;
-        align-content: center;
-    }
-
-    .paper {
-        width:calc(100vw - 10rem);
-        display: grid;
-        justify-content: center;
-        align-content: center;
-    }
-}
 
 .content {
     padding:4.5rem .5rem .5rem .5rem;
