글 오타 수정

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,16 +2,7 @@
 ---
 <!doctype html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="{{ "/assets/css/bootstrap/bootstrap.css" | relative_url }}">
-    <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
-    <link rel="stylesheet" href="/assets/css/syntax.css">
-    <link rel="stylesheet" href="/assets/css/post.css">
-    {% seo %}
-</head>
+{% include head.html %}
 <body class="default-body">
     {% include navigation.html %}
 <div class="mt-4 pt-4 mx-2 grid paper">
