config: blog config

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,5 +8,5 @@
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
     <link rel="stylesheet" href="/assets/css/syntax.css">
     <link rel="stylesheet" href="/assets/css/post.css">
-    {% seo %}
+    {% seo title=false %}
 </head>
