--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,5 @@
     <link rel="stylesheet" href="/assets/css/syntax.css">
     <link rel="stylesheet" href="/assets/css/post.css">
     {% seo title=false %}
+    <meta name="google-site-verification" content="FzIp87nE_pk-4x5nXeKcIX-x1rqYcjlabzuH1EqXFYs" />
 </head>
