--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,5 @@
     <link rel="stylesheet" href="/assets/css/post.css">
     {% seo title=false %}
     <meta name="google-site-verification" content="FzIp87nE_pk-4x5nXeKcIX-x1rqYcjlabzuH1EqXFYs" />
+    <meta name="naver-site-verification" content="6cf39493d46e888e46dfc3a608270980215dbca5" />
 </head>
