--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,12 +12,12 @@ layout: default
 
 {% include tagged.html%}
 
-<div class="content">
+<section class="content">
     <article>
     {{ content | markdownify }}
     </article>
-</div>
-<div class="g-col-4">
+</section>
+<section class="g-col-4">
     <div class="pt-4"></div>
     {% include pagenavigation.html %}
-</div>
+</section>
