--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -10,17 +10,17 @@
 
 @include tablet {
   .default-body {
-    width: calc(100vw/1.2);
+    width: calc(100vw/1.5);
     margin:0 auto;
   }
 }
 
-@include desktop {
-  .default-body {
-    width: calc(100vw/1.2);
-    margin:0 auto;
-  }
-}
+// @include desktop {
+//   .default-body {
+//     width: calc(100vw/1.2);
+//     margin:0 auto;
+//   }
+// }
 
 body {
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
@@ -29,6 +29,7 @@ body {
   color: #d4d4d4;
   background-color: #191919;
 }
+
 
 //article[role="main"] {
 //  width: math.div(600px, 960px) * 100%;
