--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -7,13 +7,18 @@
 }
 
 @mixin tablet {
-  @media (min-width: #{$breakpoint-tablet}) and (max-width: #{$breakpoint-desktop - 1px}) {
+  @media (min-width: #{$breakpoint-tablet}){
     @content;
   }
 }
+// @mixin tablet {
+//   @media (min-width: #{$breakpoint-tablet}) and (max-width: #{$breakpoint-desktop - 1px}) {
+//     @content;
+//   }
+// }
 
-@mixin desktop {
-  @media (min-width: #{$breakpoint-desktop}) {
-    @content;
-  }
-}
+// @mixin desktop {
+//   @media (min-width: #{$breakpoint-desktop}) {
+//     @content;
+//   }
+// }
