--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -58,5 +58,10 @@
     font-size:larger
 }
 .content > P > img {
-    width:100%;
+    // width:100%;
+    width: calc(100vw/1.5);
+
+}
+.bannerImg {
+    width: calc(100vw/1.5);
 }
