[STYLE]: layout css 수정

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,9 +6,36 @@
 @import "layout";
 @charset "UTF-8";
 
+.profile-root {
+
+}
+.red {
+    color:#d4d4d4
+}
+.green {
+    color:#30b600
+}
+.blue{
+    color:rgb(107, 95, 174)
+}
+
 .profile {
-    width:2.5rem;
-    height:2.5rem;
+    position: absolute;
+    top: 21.5px;
+    right: 40px;
+    width: 40px;
+    height: 40px;
+}
+
+.profile-svg {
+        animation: rotate_image 20s linear infinite;
+        transform-origin: 50% 50%;
+     
+    @keyframes rotate_image{
+        100% {
+            transform: rotate(360deg);
+        }
+    }
 }
 
 .bottom20 {
