--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,10 +1,22 @@
-<nav class="navbar navbar-expand-sm border-bottom-1 border-danger">
+<nav class="navbar border-bottom-1 border-danger">
     <div class="container-fluid mx-2">
         <a class="nav-link active" href="/">{{ site.github_username }}</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <img src="/assets/images/profile.webp" alt="🌸somsom2🌸" class="profile rounded-3">
+        <button class="navbar-toggler profile-root" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="profile-svg">
+            <svg height="56" width="56" viewBox="0 0 56 56">
+                <path d="M29.465,0.038373A28,28,0,0,1,52.948,40.712L51.166,39.804A26,26,0,0,0,29.361,2.0356Z" class="red" fill="currentColor"></path>
+                <path d="M51.483,43.250A28,28,0,0,1,4.5172,43.250L6.1946,42.161A26,26,0,0,0,49.805,42.161Z" class="green" fill="currentColor"></path>
+                <path d="M3.0518,40.712A28,28,0,0,1,26.535,0.038373L26.639,2.0356A26,26,0,0,0,4.8338,39.804Z" class="blue" fill="currentColor"></path>
+            </svg>
+        </div>
+            <img src="/assets/images/profile.webp" 
+            class="profile inline select-none rounded-5"
+            alt="🌸somsom2🌸">
         </button>
+
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 {% for item in site.data.navigation %}
                 <li class="nav-item ">
