[STYLE]: layout css 수정

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,24 +7,24 @@
 @charset "UTF-8";
 
 .profile-root {
-
+display: flex;
+justify-content: center;
+align-items: center;
 }
 .red {
-    color:#d4d4d4
+    color:rgb(250, 35, 78)
 }
 .green {
-    color:#30b600
+    color:rgb(70, 250, 97)
 }
 .blue{
-    color:rgb(107, 95, 174)
+    color:rgb(97, 70, 250)
 }
 
 .profile {
     position: absolute;
-    top: 21.5px;
-    right: 40px;
-    width: 40px;
-    height: 40px;
+    width: 2.8rem;
+    height: 2.8rem; 
 }
 
 .profile-svg {
