--- a/_includes/search.html
+++ b/_includes/search.html
@@ -8,7 +8,7 @@
   <span class="input-group-text" id="basic-addon1">🐶</span>
   <input type="text"
          id="searchtext" type="text" name="searchtext"
-         class="form-control" placeholder="Search..." aria-label="Username" aria-describedby="basic-addon1">
+         class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
      <button id="searchBtn" class="btn btn-secondary" type="button">Button</button>
    </div>
     <script defer type="text/javascript">
