[CREATE]: recursive관련 글 추가

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -20,3 +20,11 @@ blockquote {
   color: #fff;
   padding: 0.25em
 }
+
+p > img {
+  display: grid;
+  margin:0 auto;
+  max-width: 350px;
+  padding:10px;
+}
+
