[STYLE]: layout css 수정

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -24,7 +24,7 @@ blockquote {
 p > img {
   display: grid;
   margin:0 auto;
-  max-width: 350px;
   padding:10px;
+  max-width: calc(100vw/1.5);
 }
 
