--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -85,10 +85,40 @@ align-items: center;
     font-size:larger
 }
 .content > P > img {
-    // width:100%;
     width: calc(100vw/1.5);
-
 }
 .bannerImg {
     width: calc(100vw/1.5);
 }
+
+// tables
+table {
+    border: 1px #58ff1a solid;
+    font-size: .9em;
+    box-shadow: 0 2px 5px rgba(0,0,0,.25);
+    width: 100%;
+    border-collapse: collapse;
+    border-radius: 5px;
+    overflow: hidden;
+  }
+  
+  th {
+    text-align: center;
+  }
+    
+  thead {
+    font-weight: bold;
+    color: #d4d4d4;
+    background: #393939;
+  }
+    
+   td, th {
+    padding: 1em .5em;
+    vertical-align: middle;
+    text-align: center;
+  }
+    
+   td {
+    border-bottom: 1px solid rgba(0,0,0,.1);
+    background: #595959;
+  }
