[STYLE]: layout css 수정

--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,17 +1,52 @@
 <footer class="page-footer">
+
+
+
     {% if paginator.previous_page %}
     <a href="{{ paginator.previous_page_path }}" class="previous">
-        Previous
+      <svg class="transform rotate-90" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M15.101 5.5V23.1094L9.40108 17.4095L8.14807 18.6619L15.9862 26.5L23.852 18.6342L22.5996 17.3817L16.8725 23.1094V5.5H15.101Z" fill="currentColor">
+      </path>
+      </svg>
     </a>
     {% else %}
-    <span class="previous">Previous</span>
+    <a href="{{ paginator.next_page_path }}" class="next">
+      <svg class="transform rotate-90" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M15.101 5.5V23.1094L9.40108 17.4095L8.14807 18.6619L15.9862 26.5L23.852 18.6342L22.5996 17.3817L16.8725 23.1094V5.5H15.101Z" fill="currentColor">
+      </path>
+      </svg>
+    </a>
     {% endif %}
+
     <span class="page_number ">
-    Page: {{ paginator.page }} of {{ paginator.total_pages }}
-  </span>
+
+      <div>
+        <a href="{{ paginator.previous_page_path }}" class="previous">
+          {{ paginator.previous_page }} 
+        </a>
+      </div>
+
+      <div>
+         {{ paginator.page }}
+      </div>
+
+      <div>
+        <a href="{{ paginator.next_page_path }}" class="next">
+        {{ paginator.next_page }}
+        </a>
+      </div>
+    </span>
     {% if paginator.next_page %}
-    <a href="{{ paginator.next_page_path }}" class="next">Next</a>
+    <a 
+    href="{{ paginator.next_page_path }}" 
+    class="next"
+    >
+      <svg class="transform rotate-270" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M15.101 5.5V23.1094L9.40108 17.4095L8.14807 18.6619L15.9862 26.5L23.852 18.6342L22.5996 17.3817L16.8725 23.1094V5.5H15.101Z" fill="currentColor">
+      </path>
+      </svg>
+    </a>
     {% else %}
-    <span class="next ">Next</span>
+      <svg class="transform rotate-270" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M15.101 5.5V23.1094L9.40108 17.4095L8.14807 18.6619L15.9862 26.5L23.852 18.6342L22.5996 17.3817L16.8725 23.1094V5.5H15.101Z" fill="currentColor">
+      </path>
+      </svg>
     {% endif %}
 </footer>
+
