--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <h1>{{ page.title | smartify }}</h1>
     <p>
-        {{ page.date | date_to_string }}
+        {{ page.date | date_to_string: "ordinal" }}
         {% assign author = site.authors | where: 'short_name', page.author | first%}
         {% if author %}
         - <a href="{{ author.url }}" class="fs-6 fst-italic"> Author: 👨‍🎨 {{ author.name }}</a>
