--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -41,14 +41,17 @@ align-items: center;
 .bottom20 {
     height:80%
 }
+
 .page-footer{
-    position: fixed;
-    left: 0;
-    bottom: 0;
+    display: grid;
     width: 100%;
     color: white;
-    padding-top:20px;
+    padding-top: 20px;
+    justify-content: center;
+    grid-template-columns: repeat(3,1fr);
+    place-items: center;
 }
+
 .pages-wrapper {
     padding:20px;
 }
@@ -91,6 +94,13 @@ align-items: center;
     width: calc(100vw/1.5);
 }
 
+.page_number {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    place-items: center;
+    width: 100%;
+}
+
 // tables
 table {
     border: 1px #58ff1a solid;
@@ -121,4 +131,20 @@ table {
    td {
     border-bottom: 1px solid rgba(0,0,0,.1);
     background: #595959;
+  }
+
+
+  // transform
+
+  .transform {
+    transform:translate(var(--tw-translate-x),var(--tw-translate-y)) rotate(var(--tw-rotate)) skew(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+  .rotate-90 {
+    transform: rotate(90deg);
+  }
+  .rotate-180 {
+    transform: rotate(180deg);
+  }
+  .rotate-270 {
+    transform: rotate(270deg);
   }
