--- a/_includes/pageIterator.html
+++ b/_includes/pageIterator.html
@@ -6,10 +6,14 @@
         <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
 
         <p class="author">
-            <span class="date">{{ post.date }}</span>
+            <span class="date">
+               {{ post.date | date_to_long_string: "ordinal", "KR"}}
+            </span>
         </p>
 
         <p class="">{{ post.excerpt }}</p>
     </div>
     {% endfor %}
+
+    {% include pagination.html %}
 </div>
