[CREATE]: 자료구조 글 추가

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,4 +5,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.0/js/bootstrap.min.js" integrity="sha512-8Y8eGK92dzouwpROIppwr+0kPauu0qqtnzZZNEF8Pat5tuRNJxJXCkbQfJ0HlUG3y1HB3z18CSKmUo7i2zcPpg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+
+    <script src="https://unpkg.com/mermaid@9.2.2/dist/mermaid.min.js"></script>
+    <script>
+        // mermaid init
+      $(document).ready(function () {
+        mermaid.initialize({
+          startOnLoad:true,
+          theme: "default",
+        });
+        window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
+      });
+    </script>
 </footer>
