[UPDATE]: 중위순회 글 수정

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,9 +1,8 @@
 ---
-# this ensures Jekyll reads the file to be transformed into CSS later
-# only Main files contain this front matter, not partials.
 ---
 @import "typography";
 @import "layout";
+@import "assets/css/posts.scss";
 @charset "UTF-8";
 
 .profile-root {
@@ -76,20 +75,21 @@ align-items: center;
 }
 
 
-.content {
-    padding:4.5rem .5rem .5rem .5rem;
-    border-top:3px dashed #58ff1a;
 
-}
-.content > P {
-    padding-top:1.2rem;
-}
-.content > * {
-    font-size:larger
-}
-.content > P > img {
-    width: calc(100vw/1.5);
-}
+// .content {
+//     padding:4.5rem .5rem .5rem .5rem;
+//     border-top:3px dashed #58ff1a;
+
+// }
+// .content > P {
+//     padding-top:1.2rem;
+// }
+// .content > * {
+//     font-size:larger
+// }
+// .content > P > img {
+//     width: calc(100vw/1.5);
+// }
 .bannerImg {
     width: calc(100vw/1.5);
 }
@@ -102,36 +102,36 @@ align-items: center;
 }
 
 // tables
-table {
-    border: 1px #58ff1a solid;
-    font-size: .9em;
-    box-shadow: 0 2px 5px rgba(0,0,0,.25);
-    width: 100%;
-    border-collapse: collapse;
-    border-radius: 5px;
-    overflow: hidden;
-  }
+// table {
+//     border: 1px #58ff1a solid;
+//     font-size: .9em;
+//     box-shadow: 0 2px 5px rgba(0,0,0,.25);
+//     width: 100%;
+//     border-collapse: collapse;
+//     border-radius: 5px;
+//     overflow: hidden;
+//   }
   
-  th {
-    text-align: center;
-  }
+//   th {
+//     text-align: center;
+//   }
     
-  thead {
-    font-weight: bold;
-    color: #d4d4d4;
-    background: #393939;
-  }
+//   thead {
+//     font-weight: bold;
+//     color: #d4d4d4;
+//     background: #393939;
+//   }
     
-   td, th {
-    padding: 1em .5em;
-    vertical-align: middle;
-    text-align: center;
-  }
+//    td, th {
+//     padding: 1em .5em;
+//     vertical-align: middle;
+//     text-align: center;
+//   }
     
-   td {
-    border-bottom: 1px solid rgba(0,0,0,.1);
-    background: #595959;
-  }
+//    td {
+//     border-bottom: 1px solid rgba(0,0,0,.1);
+//     background: #595959;
+//   }
 
 
   // transform
