--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,7 +2,6 @@
 ---
 @import "typography";
 @import "layout";
-@import "assets/css/posts.scss";
 @charset "UTF-8";
 
 .profile-root {
@@ -147,4 +146,73 @@ align-items: center;
   }
   .rotate-270 {
     transform: rotate(270deg);
+  }
+
+
+  .content {
+    padding:4.5rem .5rem .5rem .5rem;
+    border-top:3px dashed #58ff1a;
+
+}
+.content > P {
+    padding-top:1.2rem;
+}
+.content > * {
+    font-size:larger
+}
+.content > P > img {
+    width: calc(100vw/1.5);
+}
+
+
+
+// tables
+table {
+    border: 1px #58ff1a solid;
+    font-size: .9em;
+    box-shadow: 0 2px 5px rgba(0,0,0,.25);
+    width: 100%;
+    border-collapse: collapse;
+    border-radius: 5px;
+    overflow: hidden;
+  }
+  
+  th {
+    text-align: center;
+  }
+    
+  thead {
+    font-weight: bold;
+    color: #d4d4d4;
+    background: #393939;
+  }
+    
+   td, th {
+    padding: 1em .5em;
+    vertical-align: middle;
+    text-align: center;
+  }
+    
+   td {
+    border-bottom: 1px solid rgba(0,0,0,.1);
+    background: #595959;
+  }
+
+  // quote
+  blockquote {
+    border: 1px solid #30b600;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-left: 35px;
+    padding-right: 5px;
+    border-left: 10px solid #30b600;
+  }
+  
+  blockquote:before {
+    content: "\201C";
+    font-size: 1em;
+    font-family: Georgia;
+    color: #bcbcbc;
+    float: left;
+    margin: -5px 10px 0px -10px;
   }
