--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{{ "/assets/css/bootstrap/bootstrap.css" | relative_url }}">
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
     <link rel="stylesheet" href="/assets/css/syntax.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.4/katex.min.css" integrity="sha512-mQwom8Ns4op+H29oDkD/LXO/OsXPvCFfkgZkFAVrhhePzRLU8NUI3Nkm43NhWUSmj3p5Cca2HTEkMQmXQRwDQQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     {% seo title=false %}
     <meta name="google-site-verification" content="FzIp87nE_pk-4x5nXeKcIX-x1rqYcjlabzuH1EqXFYs" />
     <meta name="naver-site-verification" content="6cf39493d46e888e46dfc3a608270980215dbca5" />
