[FIX]: layout 수정 및 불필요한 파일 삭제

--- a/_includes/pageIterator.html
+++ b/_includes/pageIterator.html
@@ -11,7 +11,7 @@
             </span>
         </p>
 
-        <p class="">{{ post.excerpt }}</p>
+        <p class="">{{ post.excerpt | truncatewords: 10, '...'}}</p>
     </div>
     {% endfor %}
 
