--- a/_includes/search.html
+++ b/_includes/search.html
@@ -4,13 +4,15 @@
     <input class="location" type="hidden" name="location"  />
     <input class="referrer" type="hidden" name="referrer"  />
 
-   <div class="input-group mb-3">
-  <span class="input-group-text" id="basic-addon1">🐶</span>
-  <input type="text"
+   <div 
+   class="input-group mb-3"
+   >
+    <input type="text"
          id="searchtext" type="text" name="searchtext"
-         class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
-     <button id="searchBtn" class="btn btn-secondary" type="button">Button</button>
+         class="form-control" placeholder="Search..." aria-label="Username" aria-describedby="basic-addon1">
+     <button id="searchBtn" class="btn btn-secondary" type="button">🔍</button>
    </div>
+
     <script defer type="text/javascript">
         const searchBtn = document.getElementById("searchBtn")
             .addEventListener("click",()=>myFunc())
