--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,10 +27,10 @@
                   {left: '$$', right: '$$', display: true},
                   {left: '$', right: '$', display: true},
                   {left: '\\(', right: '\\)', display: false},
-                  {left: '\\[', right: '\\]', display: false}
+                  {left: '\\[', right: '\\]', display: false},
               ],
               // • rendering keys, e.g.:
-              throwOnError : false
+              throwOnError : true 
             });
         });
     </script>
