[STYLE]: layout css 수정

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -15,13 +15,6 @@
   }
 }
 
-// @include desktop {
-//   .default-body {
-//     width: calc(100vw/1.2);
-//     margin:0 auto;
-//   }
-// }
-
 body {
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
   font-size: 18px;
@@ -29,28 +22,6 @@ body {
   color: #d4d4d4;
   background-color: #191919;
 }
+$color-mode-type: data;
 
 
-//article[role="main"] {
-//  width: math.div(600px, 960px) * 100%;
-//}
-//
-//aside[role="complementary"] {
-//  width: math.div(300px, 960px) * 100%;
-//  margin-left: auto;
-//}
-
-//@media only screen and (min-width: 600px) {
-//  .default-body {
-//    display: grid;
-//    justify-content: center;
-//    align-content: center;
-//  }
-//
-//  .paper {
-//    width:calc(100vw - 10rem);
-//    display: grid;
-//    justify-content: center;
-//    align-content: center;
-//  }
-//}
