--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,13 @@
 ---
 ---
 <!doctype html>
-<html>
-{% include head.html %}
-<body class="default-body">
-    {% include navigation.html %}
-<div class="mt-4 pt-4 mx-2 grid paper">
-    {{ content }}
-</div>
-</body>
-{% include footer.html %}
+<html lang="kr" data-bs-theme="dark">
+    {% include head.html %}
+    <body class="default-body">
+        {% include navigation.html %}
+        <div class="mt-4 pt-4 mx-2 grid paper">
+            {{ content }}
+        </div>
+    </body>
+    {% include footer.html %}
 </html>
