글 추가 및 세팅중...

--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -14,7 +14,9 @@ layout: layouts/base.njk
 	{%- endfor %}
 </ul>
 
+<section class="post-content">
 {{ content | safe }}
+</section>
 
 {%- if collections.posts %}
 {%- set previousPost = collections.posts | getPreviousCollectionItem %}
