--- a/public/css/index.css
+++ b/public/css/index.css
@@ -241,6 +241,10 @@ header {
 	padding: 0;
 	margin: 0;
 }
+
+.post-content {
+	font-size: large;
+}
 .post-metadata time {
 	margin-right: 1em;
 }
@@ -268,3 +272,4 @@ a[href].header-anchor:focus,
 h2 + .header-anchor {
 	font-size: 1.5em;
 }
+
