글 추가 및 필요없는 글 삭제

--- a/content/blog.njk
+++ b/content/blog.njk
@@ -1,10 +1,10 @@
 ---
 layout: layouts/home.njk
 eleventyNavigation:
-  key: Archive
+  key: logs
   order: 2
 ---
-<h1>Archive</h1>
+<h1>logs</h1>
 
 {% set postslist = collections.posts %}
 {% include "postslist.njk" %}
