--- a/css/index.css
+++ b/css/index.css
@@ -248,6 +248,9 @@ header {
 .post-metadata time {
 	margin-right: 1em;
 }
+.pt-2 {
+	padding:2rem;
+}
 
 /* Direct Links / Markdown Headers */
 .header-anchor {
