--- a/content/posts.njk
+++ b/content/posts.njk
@@ -1,10 +1,10 @@
 ---
 layout: layouts/home.njk
 eleventyNavigation:
-  key: logs
+  key: Posts
   order: 2
 ---
-<h1>logs</h1>
+<h1>Posts</h1>
 
 {% set postslist = collections.posts %}
 {% include "postslist.njk" %}
