add post that curricurm

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -31,8 +31,13 @@
 
 		{#- Render the CSS bundle using Inlined CSS (for the fastest site performance in production) #}
 		<style>{% getBundle "css" %}</style>
+
+		<script>
+			{% include "js/hi.js" %}
+		</script>
 	</head>
 	<body>
+		
 		<a href="#skip" class="visually-hidden">Skip to main content</a>
 
 		<header>
