--- a/public/css/index.css
+++ b/public/css/index.css
@@ -27,11 +27,11 @@
 		--color-gray-90: #dad8d8;
 
 		/* --text-color is assigned to --color-gray-_ above */
-		--text-color-link: #1493fb;
-		--text-color-link-active: #6969f7;
-		--text-color-link-visited: #a6a6f8;
+		--text-color-link: #2F81F7;
+		--text-color-link-active: #E6EDF3;
+		--text-color-link-visited: #7D8590;
 
-		--background-color: #15202b;
+		--background-color: RGB(14,17,22);
 	}
 }
 
@@ -117,6 +117,14 @@ table {
 table td,
 table th {
 	padding-right: 1em;
+	border: 1px solid #ddd;
+	border-collapse: collapse;
+}
+table tr:nth-child(even) {
+	background-color: rgb(69, 69, 69);
+}
+table tr:hover {
+	background-color: rgb(21, 47, 64);
 }
 
 pre,
