--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -2,7 +2,7 @@
 {% for post in postslist | reverse %}
 	<li class="postlist-item{% if post.url == url %} postlist-item-active{% endif %}">
 		<a href="{{ post.url }}" class="postlist-link">{% if post.data.title %}{{ post.data.title }}{% else %}<code>{{ post.url }}</code>{% endif %}</a>
-		<time class="postlist-date" datetime="{{ post.date | htmlDateString }}">Created at: {{ post.date | readableDate("yyyy년 LL월 dd일") }}</time>
+		<time class="postlist-date" datetime="{{ post.date | htmlDateString }}">Created at: {{ post.date | readableDate("yyyy년 LL월 dd일 hh시 mm분 ss초") }}</time>
 	</li>
 {% endfor %}
 </ol>
