--- a/content/posts.njk
+++ b/content/posts.njk
@@ -14,10 +14,10 @@ permalink: posts/{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber 
 {% set postslist = collections.posts | head(-1 * numberOfLatestPostsToShow) %}
 {% set postslistCounter = postsCount %}
 
-<h1> > SELECT COUNT(*) FROM POSTS </h1>
-<h1> > {{postslistCounter}}</h1>
+<h1> > 총 {{postslistCounter}} 개의 글이 있습니다.</h1>
 <div class="links-nextprev"></div>
-<ol reversed class="postlist" style="counter-reset: start-from {{ (postslistCounter or postslist.length) + 1 }}">
+  
+<ol reversed class="postlist" style="counter-reset: start-from {{ postslistCounter - (pagination.pageNumber * 5) }}">
 {% for item in pagination.items | reverse %}
   <li class="postlist-item postlist-item-active">
       <a href="{{ item.page.url }}" class="postlist-link">{% if item.data.title %}{{ item.data.title }}{% else %}<code>{{ item.url }}</code>{% endif %}</a>
@@ -27,14 +27,11 @@ permalink: posts/{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber 
 </ol>
 
 <div class="flex-list">
-{% for i in range(1, pagination.pageLinks.length) %}
+{% for i in range(0, pagination.pageLinks.length) %}
 {% set condition = pagination.pageNumber === i %}
   <li>
-    <a 
-    href="{{ pagination['links'][i] }}" 
-    class="{% if condition %}slide-top2{% endif %}"
-    >
-      {{ i }}
+    <a href="{{ pagination['links'][i] }}" class="a-tag">
+      <div class="{% if condition %} slide-top {% endif %}">{{ i }}</div>
     </a>
   </li>
 {% endfor %}
