--- a/public/css/index.css
+++ b/public/css/index.css
@@ -311,8 +311,8 @@ h2 + .header-anchor {
 			  transform: translateY(0);
 	}
 	100% {
-	  -webkit-transform: translateY(-100px);
-			  transform: translateY(-100px);
+	  -webkit-transform: translateY(-7px);
+			  transform: translateY(-7px);
 	}
   }
   @keyframes slide-top {
@@ -321,12 +321,17 @@ h2 + .header-anchor {
 			  transform: translateY(0);
 	}
 	100% {
-	  -webkit-transform: translateY(-100px);
-			  transform: translateY(-100px);
+	  -webkit-transform: translateY(-7px);
+			  transform: translateY(-7px);
 	}
   }
 
 .slide-top {
-	-webkit-animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) infinite both;
-	        animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) infinite both;
+	color:#2F81F7;
+	font-size: large;
+	-webkit-animation: slide-top 0.2s cubic-bezier(0.250, 0.460, 0.450, 0.940) 500ms both;
+	        animation: slide-top 0.2s cubic-bezier(0.250, 0.460, 0.450, 0.940) 500ms both;
+}
+.a-tag {
+	text-decoration: none;
 }
