--- a/content/posts.njk
+++ b/content/posts.njk
@@ -27,10 +27,21 @@ permalink: posts/{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber 
 </ol>
 
 <div class="flex-list">
-{% for i in range(0, pagination.pageLinks.length) %}
-{% set condition = pagination.pageNumber === i %}
+{# {% for i in range(0, pagination.pageLinks.length) %} #}
+{# 3 -> 3 * 15
+한 페이지에 5개 씩 끊어 놓았음
+
+페이지 넘버가 3인 경우 1 ~ 5 사잇값이므로 pagination은 1 ~ 5이면 됨
+다음 페이지는 6 ~ 10으로 설정 됨
+
+
+
+ #}
+{{ max }}
+{% for i in range(1, 10) %}
+{% set condition = pagination.pageNumber === i - 1%}
   <li>
-    <a href="{{ pagination['links'][i] }}" class="a-tag">
+    <a href="{{ pagination['links'][i - 1] }}" class="a-tag">
       <div class="{% if condition %} slide-top {% endif %}">{{ i }}</div>
     </a>
   </li>
