--- a/content/posts.njk
+++ b/content/posts.njk
@@ -17,7 +17,7 @@ permalink: posts/{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber 
 <h1> > 총 {{postslistCounter}} 개의 글이 있습니다.</h1>
 <div class="links-nextprev"></div>
   
-<ol reversed class="postlist" style="counter-reset: start-from {{ postslistCounter - (pagination.pageNumber * 5) }}">
+<ol reversed class="postlist" style="counter-reset: start-from {{ postslistCounter + 1 - (pagination.pageNumber * 5) }}">
 {% for item in pagination.items | reverse %}
   <li class="postlist-item postlist-item-active">
       <a href="{{ item.page.url }}" class="postlist-link">{% if item.data.title %}{{ item.data.title }}{% else %}<code>{{ item.url }}</code>{% endif %}</a>
@@ -25,21 +25,16 @@ permalink: posts/{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber 
   </li>
 {% endfor %}
 </ol>
-
 <div class="flex-list">
 {# {% for i in range(0, pagination.pageLinks.length) %} #}
 {# 3 -> 3 * 15
 한 페이지에 5개 씩 끊어 놓았음
 
 페이지 넘버가 3인 경우 1 ~ 5 사잇값이므로 pagination은 1 ~ 5이면 됨
-다음 페이지는 6 ~ 10으로 설정 됨
+다음 페이지는 6 ~ 10으로 설정 됨#}
 
-
-
- #}
-{{ max }}
-{% for i in range(1, 10) %}
-{% set condition = pagination.pageNumber === i - 1%}
+{% for i in range(1, pagination.pageLinks.length + 1) %}
+  {% set condition = pagination.pageNumber === i - 1 %}
   <li>
     <a href="{{ pagination['links'][i - 1] }}" class="a-tag">
       <div class="{% if condition %} slide-top {% endif %}">{{ i }}</div>
