deploy: 51d34603b84846b79cababf7dbf3299cc2d87b3b

--- a/css/index.css
+++ b/css/index.css
@@ -260,6 +260,7 @@ header {
 	padding:2rem;
 }
 
+
 /* Direct Links / Markdown Headers */
 .header-anchor {
 	text-decoration: none;
@@ -284,3 +285,53 @@ h2 + .header-anchor {
 	font-size: 1.5em;
 }
 
+.flex-list {
+	display: flex;
+    list-style: none;
+    justify-content: space-between;
+    max-width: 20%;
+    margin: 0 auto;
+}
+
+.pagination-links {
+	text-decoration: none;
+	font-style: normal;
+	font-size: 1.4em;
+	margin-left: .1em;
+}
+
+/**
+ * ----------------------------------------
+ * animation slide-top
+ * ----------------------------------------
+ */
+ @-webkit-keyframes slide-top {
+	0% {
+	  -webkit-transform: translateY(0);
+			  transform: translateY(0);
+	}
+	100% {
+	  -webkit-transform: translateY(-7px);
+			  transform: translateY(-7px);
+	}
+  }
+  @keyframes slide-top {
+	0% {
+	  -webkit-transform: translateY(0);
+			  transform: translateY(0);
+	}
+	100% {
+	  -webkit-transform: translateY(-7px);
+			  transform: translateY(-7px);
+	}
+  }
+
+.slide-top {
+	color:#2F81F7;
+	font-size: large;
+	-webkit-animation: slide-top 0.2s cubic-bezier(0.250, 0.460, 0.450, 0.940) 500ms both;
+	        animation: slide-top 0.2s cubic-bezier(0.250, 0.460, 0.450, 0.940) 500ms both;
+}
+.a-tag {
+	text-decoration: none;
+}
